[project]
name = "DicomFlowLib"
version = "0.1"
requires-python = ">=3.8"
authors = [
    { name = "Mathis Rasmussen", email = "mathis.rasmussen@rm.dk"},
]
classifiers = []
keywords = []

[project.urls]
homepage = "https://github.com/Aarhus-RadOnc-AI/DicomFlowLib"
repository = "https://github.com/Aarhus-RadOnc-AI/DicomFlowLib"

[build-system]
requires = [
    "setuptools @ git+https://github.com/pypa/setuptools.git@main",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements"] }